<resources>
    <string name="app_name">TouchFit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Logged out</string>
    <string name="nav_header_subtitle">Log in to save your results</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_training">Training</string>
    <string name="menu_devices">Light devices</string>
    <string name="menu_settings">Settings</string>
    <string name="customize_label">Account</string>
    <string name="edit_device">Edit device</string>
    <string name="online_status">Connected</string>
    <string name="offline_status">Disconnected</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register with Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_in_ano">Go Anonymous</string>
    <string name="anonymous">Anonymous</string>
    <string name="logout">Logout</string>
    <string name="connect_to_wifi">Please activate WiFi</string>
    <string name="activate_wifi">Activate</string>
    <string name="add_new_light">Add new light</string>
    <string name="next">Next</string>
    <string name="choose_wifi">Choose Light</string>
    <string name="accept_location_permission">Can\'t scan nearby devices, please accept the permission</string>
    <string name="not_found">No LightDevice found!</string>
    <string name="connect_to_your_wifi">Please connect to your WiFi first</string>
    <string name="choose_a_light">Choose a light: </string>
    <string name="network_settings">%s\'s settings: </string>
    <string name="security_s">Security: %s</string>
    <string name="wifi_password">Wifi Password</string>
    <string name="sign_in_failed_connection">Google sign in failed, please check your connection</string>
    <string name="auth_failed">Authentication Failed.</string>
    <string name="choose_a_device_name">Choose a Device Name</string>
    <string name="delete_device">Delete</string>
    <string name="rename_device">Rename</string>
    <string name="rename_device_to">Rename device</string>
    <string name="delete_advice">Deleting… The Light will be reset</string>
    <string name="training">Training</string>
    <string name="light_max_time">Light max time:</string>
    <string name="challenges">Challenge of the day</string>
    <string name="seconds">sec.</string>
    <string name="light_each">Number of lights to activate: </string>
    <string name="let_s_go">Let\'s Go</string>

    <string name="title_activity_game">Game</string>
    <string name="warning_psm">Warning! This application is not optimized for PowerSave Mode</string>
    <string name="no_device">No lights connected found! Please add lights before starting game</string>
    <string name="please_provide">Please enter a number</string>
    <string name="connected_not_ready">Connected but not ready</string>
    <string name="stop_game">Stop</string>
    <string name="lights_accuracy">Accuracy</string>
    <string name="average">Average:</string>
    <string name="lights_left">Lights left:</string>
    <string name="light_activated">Light activated:</string>
    <string name="light_activated_stats">%1$d/%2$d</string>
    <string name="averageData">%f sec/light</string>
    <string name="accuracy">%d%%</string>
    <string name="game_review">Game Review</string>
    <string name="game_finished">Game Finished!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stats">Statistics</string>
    <string name="time">Time:</string>
    <string name="activated_by_total">Activated/Total</string>
    <string name="no_fails_challenge">No Fails Challenge with %d lights and %d sec. per lights</string>
    <string name="lights_seconds_challenge">Try to turn off %d lights in less than %d sec!</string>
    <string name="success">Success!</string>
    <string name="Tries_so_far">%d tries so far…</string>
    <string name="never_tester">Never tested yet</string>
    <string name="streaks">Streaks</string>
    <string name="collect_streaks">Collect more streaks to see older challenges</string>
    <string name="day_nbr">Day %d</string>

</resources>
