<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_training"
                android:icon="@drawable/ic_training_menu"
                android:title="@string/menu_training"/>
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_stats"
            android:title="@string/stats"/>
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_devices_menu"
            android:title="@string/menu_devices"/>

    </group>

    <item android:title="@string/customize_label">
        <menu>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_menu"
                android:title="@string/menu_settings"/>

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout_icon"
                android:title="@string/logout"
                android:visible="false"/>
        </menu>
    </item>

</menu>
