<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_training">

    <fragment
            android:id="@+id/nav_training"
            android:name="uqac.bigbrainstudio.touchfit.ui.home.TrainingFragment"
            android:label="@string/menu_training"
            tools:layout="@layout/fragment_training"/>
    <fragment
            android:id="@+id/nav_stats"
            android:name="uqac.bigbrainstudio.touchfit.ui.home.StatsFragment"
            android:label="@string/stats"
            tools:layout="@layout/fragment_stats"
            />
    <fragment
            android:id="@+id/nav_devices"
            android:name="uqac.bigbrainstudio.touchfit.ui.devices.DevicesFragment"
            android:label="@string/menu_devices"
            tools:layout="@layout/fragment_devices_list"/>

</navigation>