<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardTraining"
            app:cardCornerRadius="4dp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"


            app:cardElevation="10dp"
            >

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_workout"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training"
                android:textSize="32sp"
                android:layout_gravity="center_horizontal"
                android:background="#1B888888"

                android:layout_marginVertical="@dimen/activity_vertical_margin"

                android:textColor="#FF0000"
                />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#8888"

                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_max_time"
                    android:id="@+id/text_lightTime"
                    android:textSize="24sp"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/text_lightTime"
                    android:inputType="number"
                    android:autofillHints="@string/seconds"
                    android:layout_marginVertical="12dp"
                    android:maxLength="2"
                    android:hint="10"
                    android:labelFor="@id/text_lightTime"
                    android:id="@+id/numberSecondsLight"
                    tools:ignore="HardcodedText"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/numberSecondsLight"
                    android:text="@string/seconds"
                    android:id="@+id/text_seconds"
                    android:textSize="24sp"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <TextView
                    android:layout_below="@id/text_lightTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_each"
                    android:id="@+id/text_lightNumber"
                    android:textSize="24sp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>

            <EditText

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/text_lightNumber"
                    android:inputType="number"
                    android:autofillHints="@string/seconds"
                    android:maxLength="2"
                    android:hint="10"
                    android:labelFor="@id/text_lightTime"
                    android:id="@+id/numberEachLight"
                    tools:ignore="HardcodedText"
                    android:layout_below="@id/text_seconds"
                    android:layout_marginTop="-4dp"/>

            <Button
                    android:text="@string/let_s_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/start_button"
                    android:layout_below="@+id/text_lightNumber"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    tools:layout_marginVertical="8dp"/>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardChallenge"
            app:cardCornerRadius="4dp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"


            app:cardElevation="10dp"
            >

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_challenges"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/challenges"
                android:textSize="32sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#69FF1C"
                android:background="#1B888888"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                />


    </androidx.cardview.widget.CardView>
</LinearLayout>
