<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.game.FinishActivity"
        android:background="#0099cc">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/game_finished"
            android:textColor="#FFFFFF"
            android:id="@+id/game_finshed"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>

    <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:columnCount="2"
            app:rowCount="2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/game_finshed"
            android:id="@+id/gridLayout"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/endChart"
            android:layout_marginBottom="8dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                android:background="#804CAF50"
                android:gravity="center">

            <TextView
                    android:textColor="#FFFFFF"
                    android:text="@string/average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adviceAverageScore"
                    android:textAlignment="center"
                    />

            <TextView
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/averageScore"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    />
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                android:background="#80FF0000"
                android:gravity="center">

            <TextView
                    android:textColor="#FFFFFF"
                    android:text="@string/activated_by_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adviceGameLightDevicesActivated"

                    android:textAlignment="center"
                    />

            <TextView
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gameLightDevicesActivated"

                    android:textAlignment="center"
                    android:textStyle="bold"
                    />

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                android:background="#80FFC107"
                android:gravity="center">

            <TextView
                    android:textColor="#FFFFFF"
                    android:text="@string/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adviceTime"
                    android:textAlignment="center"
                    />

            <TextView
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lightDevicesLeft"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    />

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                android:background="#80673AB7"
                android:gravity="center">

            <TextView
                    android:textColor="#FFFFFF"
                    android:text="@string/lights_accuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/adviceActiveLight"
                    android:textAlignment="center"
                    />

            <TextView
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/accuracy"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    />

        </LinearLayout>


    </androidx.gridlayout.widget.GridLayout>

    <com.github.mikephil.charting.charts.BarChart
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/endChart"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp">

    </com.github.mikephil.charting.charts.BarChart>
</androidx.constraintlayout.widget.ConstraintLayout>