<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:background="#0099cc"
             tools:context=".ui.game.GameActivity"
             android:id="@+id/frameLayoutGame"
             android:keepScreenOn="true"
        >

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
            android:id="@+id/fullscreen_decompte"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="50sp"
            android:gravity="center"
            />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/gameLayout"
            android:visibility="gone"

            >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timerTextView"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="36sp"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="56dp"/>

        <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/timerTextView"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:columnCount="2"
                app:rowCount="2"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                >

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"
                    android:background="#80FF0000"
                    android:gravity="center">

                <TextView
                        android:textColor="#FFFFFF"
                        android:text="@string/light_activated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/adviceGameLightDevicesActivated"

                        android:textAlignment="center"
                        />

                <TextView
                        android:textColor="#FFFFFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/gameLightDevicesActivated"

                        android:textAlignment="center"
                        android:textStyle="bold"
                        />

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"
                    android:background="#80FFC107"
                    android:gravity="center">

                <TextView
                        android:textColor="#FFFFFF"
                        android:text="@string/lights_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/adviceLightDevicesLeft"
                        android:textAlignment="center"
                        />

                <TextView
                        android:textColor="#FFFFFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lightDevicesLeft"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        />

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"
                    android:background="#804CAF50"
                    android:gravity="center">

                <TextView
                        android:textColor="#FFFFFF"
                        android:text="@string/average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/adviceAverageScore"
                        android:textAlignment="center"
                        />

                <TextView
                        android:textColor="#FFFFFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/averageScore"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        />
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"
                    android:background="#80673AB7"
                    android:gravity="center">

                <TextView
                        android:textColor="#FFFFFF"
                        android:text="@string/lights_accuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/adviceActiveLight"
                        android:textAlignment="center"
                        />

                <TextView
                        android:textColor="#FFFFFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/accuracy"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        />

            </LinearLayout>


        </androidx.gridlayout.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

        <LinearLayout
                android:id="@+id/fullscreen_content_controls"
                style="?metaButtonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@color/black_overlay"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

            <Button
                    android:id="@+id/stop_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stop_game"
                    android:background="@color/design_default_color_error"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>